may using mockito&powermock and lombok